# etl_pipeline

./: .gitignore  AR_ETL.py  auto_report.py  auto_report_pipeline.py  config.py  correlation_results.csv  etl_pipeline.py  extract.py  load.py  logger.py  main.py  main_pipeline.py  readme.md  test_extract.py  transform.py
AutoReporting/: auto_report.py
AutoReporting/auto_report_pipeline/: extract.py  transform.py
auto_report_pipeline/: AR_ETL.py  auto_report.py  extract.py  report_generator.py  transform.py  utils.py
config/: config.py
csv_analyzer/: correlation_scanner.py  main.py
csv_analyzer/input_csv/: input.csv
csv_analyzer/output_data/: crosstabs_output.csv
data/: Test_Data.csv  report_data.db
etl/: extract.py  load.py  logger.py  pyproject.toml  transform.py  utils.py  validate.py
etl/config/: config.py  dev.yaml  prod.yaml
etl/csv_analyzer/: correlation_scanner.py  main.py  pop.py  vendor_list.py
etl/csv_analyzer/output_data/: vendor_stats.csv
tests/: test_extract.py  test_transform.py
